traces/bug_588.txt
src/femlib/P012_3d.cpp:711: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge0_3d::QFe accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


src/femlib/P012_3d.cpp:711:6: initialization of Fem2D::TypeOfFE_Edge0_3d::QFe
709.        int TypeOfFE_Edge0_3d::dfon[]={0,1,0,0}; 
710.        
711.        const  GQuadratureFormular<R1> TypeOfFE_Edge0_3d::QFe(-1+2*2,2,GaussLegendre(2),true);
            ^
712.        
713.        TypeOfFE_Edge0_3d::TypeOfFE_Edge0_3d(): GTypeOfFE<Mesh3>(TypeOfFE_Edge0_3d::dfon,d,1,Element::ne*3*QFe.n,Element::ne*QFe.n,false,true)

src/femlib/P012_3d.cpp:711:56: call to Fem2D::GQuadratureFormular<Fem2D::R1>_GQuadratureFormular
709.        int TypeOfFE_Edge0_3d::dfon[]={0,1,0,0}; 
710.        
711.        const  GQuadratureFormular<R1> TypeOfFE_Edge0_3d::QFe(-1+2*2,2,GaussLegendre(2),true);
                                                              ^
712.        
713.        TypeOfFE_Edge0_3d::TypeOfFE_Edge0_3d(): GTypeOfFE<Mesh3>(TypeOfFE_Edge0_3d::dfon,d,1,Element::ne*3*QFe.n,Element::ne*QFe.n,false,true)

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R1>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
